Fix archives page dates, button line height, padding and spacing.

--- a/assets/css/src/modules/_blog.scss
+++ b/assets/css/src/modules/_blog.scss
@@ -69,7 +69,6 @@
 
 .blog-index {
   @include rem(font-size, 18px);
-  @include container-spacing(padding-bottom);
 }
 
 .blog-index-heading {
@@ -81,25 +80,34 @@
 
 .blog-index-list > li {
   margin-bottom: 1.5em;
+  position: relative;
 }
 
 .blog-index-title {
   font-family: $type-sans;
   font-weight: weight(medium);
-  display: inline-block;
   line-height: 1.3;
-}
-
-.blog-index-synopsis {
-  line-height: 1.4;
-  color: gray(40%);
 }
 
 .blog-index-date {
   @include rem(font-size, 13px);
   @include smallcaps-heading-thin;
-  float: right;
-  margin-left: 2em;
+}
+
+@include media-from($bp-m) {
+  .blog-index-title {
+    @include rem(margin-right, 10*13px);
+  }
+  .blog-index-date {
+    position: absolute;
+    top: 0; right: 0;
+  }
+}
+
+.blog-index-synopsis {
+  line-height: 1.4;
+  color: gray(40%);
+  clear: both;
 }
 
 
@@ -110,16 +118,20 @@
   display: block;
   text-align: center;
   
-  @include rem(padding, 20px);
+  @include rem(padding-top padding-bottom, 20px);
+  @include rem(padding-left padding-right, 10px);
+  @include rem(margin-top, 2rem);
   
   border-radius: 6px;
   margin-right: 1em;
   &:last-child { margin-right: 0; }
 
-  @include rem(font-size, 17px);
+  @include rem(font-size, 16px);
+  
   font-family: $type-sans;
-  font-weight: weight(bold);
+  font-weight: weight(medium);
   text-transform: uppercase;
+  line-height: 1.4;
   letter-spacing: 0.15em;
   word-spacing: 0.15em;
 }
